[package]
name = "capture-as-image"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/capture-as-image-rs"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.22"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
clap = "4.5.4"
env_logger = "0.11.5"
image = "0.25.1"

[[example]]
name = "capture-as-image"

[profile.release]
strip = "symbols"
lto = true
