[package]
name = "capture-as-image"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/capture-as-image-rs"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.28"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
clap = "4.5.49"
env_logger = "0.11.6"
image = "0.25.8"

[[example]]
name = "capture-as-image"

[profile.release]
strip = "symbols"
lto = true
